--- a/backbone.html
+++ b/backbone.html
@@ -22,20 +22,20 @@
 		var App = Backbone.View.extend({
 			initialize: function(){
 				var $select = this.$el.find('select');
-				this.customSelect = new CustomSelect({select:$select});
+				this.customSelect = new CustomSelect({select: $select});
 				this.listenTo(this.customSelect, 'CustomSelect:selectChanged', this.onSelectChanged);
 			},
 			//render: function(){},
 			onSelectChanged: function(data){
-				console.log(data);
+				console.log('onSelectChanged', data);
 			}
 		});
 		$(document).on('CustomSelect:selectChanged', function(e, data){
 			console.log('CustomSelect', data);
 		});
-		$(function () {
-			el = $('#customselect-form');
-			app = new App({el:el});
+		$(function(){
+			var $el = $('#customselect-form');
+			var app = new App({el: $el});
 		});
 	</script>
 
