--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<link rel="stylesheet" href="assets/styles/styles.css" />
 	<link rel="stylesheet" href="assets/styles/custom-select.css" />
 
-	<script src="assets/scripts/vendor/modernizr-2.7.0.custom.min.js"></script>
-	<script src="assets/scripts/vendor/json2.js"></script>
-	<script src="assets/scripts/vendor/jquery-1.10.2.min.js"></script>
-	<script src="assets/scripts/vendor/mustache-0.7.3.js"></script>
-	<script src="assets/scripts/vendor/underscore-1.5.2.min.js"></script>
-	<script src="assets/scripts/vendor/backbone-1.1.0.min.js"></script>
+	<script src="assets/scripts/vendor/modernizr.custom.min.js"></script>
+	<script src="assets/scripts/vendor/jquery.min.js"></script>
+	<script src="assets/scripts/vendor/mustache.js"></script>
+	<script src="assets/scripts/vendor/underscore.min.js"></script>
+	<script src="assets/scripts/vendor/backbone.min.js"></script>
+	<script src="assets/scripts/shims/classList.js"></script>
 	<script src="assets/scripts/classes/custom-select.js"></script>
 
 	<script>
