--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<link rel="stylesheet" href="assets/styles/styles.css" />
 	<link rel="stylesheet" href="assets/styles/custom-select.css" />
 
+	<!--[if IE 9]><script src="_ui/js/shims/classList.js"></script><![endif]-->
 	<script src="assets/scripts/vendor/modernizr.custom.min.js"></script>
 	<script src="assets/scripts/vendor/jquery.min.js"></script>
+	<script src="assets/scripts/vendor/lodash.min.js"></script>
 	<script src="assets/scripts/vendor/mustache.js"></script>
-	<script src="assets/scripts/vendor/underscore.min.js"></script>
 	<script src="assets/scripts/vendor/backbone.min.js"></script>
-	<script src="assets/scripts/shims/classList.js"></script>
 	<script src="assets/scripts/classes/custom-select.js"></script>
 
 	<script>
