--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<script src="assets/scripts/vendor/modernizr.custom.min.js"></script>
 	<script src="assets/scripts/vendor/jquery.min.js"></script>
 	<script src="assets/scripts/vendor/mustache.min.js"></script>
-	<script src="assets/scripts/vendor/underscore.min.js"></script>
-	<script src="assets/scripts/vendor/backbone.min.js"></script>
-	<script src="assets/scripts/vendor/backbone-super.min.js"></script>
+	<script src="assets/scripts/vendor/underscore-min.js"></script>
+	<!--<script src="assets/scripts/vendor/backbone-min.js"></script>-->
+	<!--<script src="assets/scripts/vendor/backbone-super-min.js"></script>-->
 	<script src="assets/scripts/classes/custom-select.js"></script>
 
 	<script>
@@ -57,13 +57,13 @@
 			</ol>
 		</fieldset>
 
-		<script id="tmpCustomSelect" type="text/template" class="template">
+		<script id="tmpCustomSelect" type="text/template">
 			<span class="custom-select-label">{{label}}</span>
 			<span class="custom-select-arrow"></span>
-			<div class="custom-select-list">
+			<div class="custom-select-list" role="listbox">
 				<ul>
 					{{#items}}
-					<li><a href="#{{rel}}" rel="{{rel}}" class="{{#active}}active{{/active}}">{{text}}</a></li>
+					<li role="option"><a href="#{{rel}}" rel="{{rel}}" class="{{#active}}active{{/active}}">{{text}}</a></li>
 					{{/items}}
 				</ul>
 			</div>
