--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
 						<option value="i9">in voluptate velit esse cillum dolore</option>
 					</select>
 				</li>
+				<li>
+					<p>
+						Hello World. The dropdown above will slide over me and not push me down.
+					</p>
+				</li>
 			</ol>
 		</fieldset>
 
