--- a/backbone.html
+++ b/backbone.html
@@ -14,9 +14,9 @@
 	<script src="assets/scripts/vendor/modernizr.custom.min.js"></script>
 	<script src="assets/scripts/vendor/jquery.min.js"></script>
 	<script src="assets/scripts/vendor/mustache.min.js"></script>
-	<script src="assets/scripts/vendor/underscore-min.js"></script>
-	<script src="assets/scripts/vendor/backbone-min.js"></script>
-	<script src="assets/scripts/vendor/backbone-super-min.js"></script>
+	<script src="assets/scripts/vendor/underscore.min.js"></script>
+	<script src="assets/scripts/vendor/backbone.min.js"></script>
+	<script src="assets/scripts/vendor/backbone-super.min.js"></script>
 	<script src="assets/scripts/views/custom-select-view.js"></script>
 
 	<script>
