--- a/backbone.html
+++ b/backbone.html
@@ -7,17 +7,17 @@
 
 	<title>Custom Select</title>
 
-	<link rel="stylesheet" href="assets/styles/styles.css" />
-	<link rel="stylesheet" href="assets/styles/custom-select.css" />
+	<link rel="stylesheet" href="_assets/styles/styles.css" />
+	<link rel="stylesheet" href="_assets/styles/custom-select.css" />
 
-	<!--[if IE 9]><script src="assets/scripts/shims/classList.js"></script><![endif]-->
-	<script src="assets/scripts/vendor/modernizr.custom.min.js"></script>
-	<script src="assets/scripts/vendor/jquery.min.js"></script>
-	<script src="assets/scripts/vendor/mustache.min.js"></script>
-	<script src="assets/scripts/vendor/underscore.min.js"></script>
-	<script src="assets/scripts/vendor/backbone.min.js"></script>
-	<script src="assets/scripts/vendor/backbone-super.min.js"></script>
-	<script src="assets/scripts/views/custom-select-view.js"></script>
+	<!--[if IE 9]><script src="_assets/scripts/shims/classList.js"></script><![endif]-->
+	<script src="_assets/scripts/vendor/modernizr.custom.min.js"></script>
+	<script src="_assets/scripts/vendor/jquery.min.js"></script>
+	<script src="_assets/scripts/vendor/mustache.min.js"></script>
+	<script src="_assets/scripts/vendor/underscore.min.js"></script>
+	<script src="_assets/scripts/vendor/backbone.min.js"></script>
+	<script src="_assets/scripts/vendor/backbone-super.min.js"></script>
+	<script src="_assets/scripts/views/custom-select-view.js"></script>
 
 	<script>
 		var App = Backbone.View.extend({
